--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  
+    "ConnectionStrings": {
+      "DefaultConnection": "server =(local); database = fptforum;uid=sa;pwd=123;Trusted_Connection=True;Encrypt=False"
+    }
+
 }
