--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -21,7 +21,9 @@
     "@tiptap/starter-kit": "^2.4.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
+    "emoji-picker-react": "^4.9.4",
     "npm": "^10.8.1",
+    "oidc-react": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
