--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "emoji-picker-react": "^4.9.4",
+    "framer-motion": "^11.2.10",
     "npm": "^10.8.1",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
