--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -10,5 +10,11 @@
   "ConnectionStrings": {
     "QureryConnection": "server =(local); database = fptforum;uid=sa_query;pwd=123;Trusted_Connection=True;Encrypt=False",
     "CommandConnection": "server =(local); database = fptforum;uid=sa_command;pwd=123;Trusted_Connection=True;Encrypt=False"
+  },
+  "IdentityServer": {
+    "aud": "https://feid.ptudev.net/resources",
+    "url": "https://feid.ptudev.net",
+    "iss": "https://feid.ptudev.net",
+    "Key": "Yr3&Og9&Dl6&Ie1#Rw2!Oj5!Yy1*Og3!"
   }
 }
