--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --port 3000",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "dev": "cross-env BUILD_MODE=dev vite --host --port 3000",
+    "build": "cross-env BUILD_MODE=production vite build --base=./",
+    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -20,7 +20,7 @@
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "axios": "^1.7.2",
-    "dotenv": "^16.4.5",
+    "cross-env": "^7.0.3",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
     "npm": "^10.8.1",
