--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.10.2",
+    "@mantine/hooks": "^7.10.2",
     "@reduxjs/toolkit": "^2.2.5",
+    "@tabler/icons-react": "^3.6.0",
     "@tailwindcss/typography": "^0.5.13",
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-image": "^2.4.0",
@@ -32,7 +35,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -44,6 +48,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "postcss": "^8.4.38",
+    "postcss-preset-mantine": "^1.15.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.2.0"
   }
