--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.4",
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
     "@reduxjs/toolkit": "^2.2.5",
@@ -26,6 +28,7 @@
     "cross-env": "^7.0.3",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
+    "lodash": "^4.17.21",
     "npm": "^10.8.1",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
