--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -14,11 +14,15 @@
     "@emotion/react": "^11.11.4",
     "@mantine/core": "^7.10.2",
     "@mantine/hooks": "^7.10.2",
+    "@mantine/modals": "^7.10.2",
+    "@mantine/styles": "^6.0.21",
+    "@mantine/tiptap": "^7.10.2",
     "@reduxjs/toolkit": "^2.2.5",
     "@tabler/icons-react": "^3.6.0",
     "@tailwindcss/typography": "^0.5.13",
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-image": "^2.4.0",
+    "@tiptap/extension-link": "^2.4.0",
     "@tiptap/extension-placeholder": "^2.4.0",
     "@tiptap/extension-underline": "^2.4.0",
     "@tiptap/pm": "^2.4.0",
