--- a/Server/fptsocial/Application/Application.csproj
+++ b/Server/fptsocial/Application/Application.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\Domain\Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="bannedWords.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
