--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -30,8 +30,10 @@
     "@tiptap/starter-kit": "^2.4.0",
     "axios": "^1.7.2",
     "cross-env": "^7.0.3",
+    "dompurify": "^3.1.5",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
+    "html-react-parser": "^5.1.10",
     "lodash": "^4.17.21",
     "npm": "^10.8.1",
     "oidc-react": "^3.2.2",
