--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
-    "@mantine/core": "^7.10.2",
-    "@mantine/hooks": "^7.10.2",
-    "@mantine/modals": "^7.10.2",
-    "@mantine/styles": "^6.0.21",
-    "@mantine/tiptap": "^7.10.2",
+    "@emotion/styled": "^11.11.5",
+    "@material/dialog": "^14.0.0",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.21",
+    "@mui/x-date-pickers": "^7.8.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@tabler/icons-react": "^3.7.0",
     "@tailwindcss/typography": "^0.5.13",
@@ -35,12 +34,12 @@
     "framer-motion": "^11.2.10",
     "html-react-parser": "^5.1.10",
     "lodash": "^4.17.21",
+    "material-ui-confirm": "^3.0.16",
     "npm": "^10.8.1",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
-    "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
