--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "QureryConnection": "server =(local); database = fptforum;uid=sa_query;pwd=123;Trusted_Connection=True;Encrypt=False",
+    "QueryConnection": "server =(local); database = fptforum;uid=sa_query;pwd=123;Trusted_Connection=True;Encrypt=False",
     "CommandConnection": "server =(local); database = fptforum;uid=sa_command;pwd=123;Trusted_Connection=True;Encrypt=False"
   },
   "IdentityServer": {
