--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -35,6 +35,7 @@
     "html-react-parser": "^5.1.10",
     "lodash": "^4.17.21",
     "material-ui-confirm": "^3.0.16",
+    "moment": "^2.30.1",
     "npm": "^10.8.1",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
