[Update] Connections config for signalR

--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -10,7 +10,7 @@
   "ConnectionStrings": {
     "QueryConnection": "server =(local); database = fptforum;uid=sa_query;pwd=123;Trusted_Connection=True;Encrypt=False",
     "CommandConnection": "server =(local); database = fptforum;uid=sa_command;pwd=123;Trusted_Connection=True;Encrypt=False",
-    "SignalConnection": "server =(local); database = fptforumuid=sa;pwd=123;Trusted_Connection=False;MultipleActiveResultSets=True"
+    "SignalConnection": "server =(local); database = fptforum;uid=sa;pwd=123;Trusted_Connection=False;MultipleActiveResultSets=True"
   },
   "IdentityServer": {
     "aud": "https://feid.ptudev.net/resources",
