--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.2.1",
+    "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@material/dialog": "^14.0.0",
@@ -31,6 +33,7 @@
     "axios": "^1.7.2",
     "cross-env": "^7.0.3",
     "dompurify": "^3.1.5",
+    "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
     "html-react-parser": "^5.1.10",
