Update connection string with cloud database

--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -8,8 +8,10 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "QueryConnection": "server =(local); database = fptforum;uid=sa_query;pwd=123;Trusted_Connection=True;Encrypt=False",
-    "CommandConnection": "server =(local); database = fptforum;uid=sa_command;pwd=123;Trusted_Connection=True;Encrypt=False"
+    //"QueryConnection": "server =(local); database = fptforum;uid=sa_query;pwd=123;Trusted_Connection=True;Encrypt=False",
+    //"CommandConnection": "server =(local); database = fptforum;uid=sa_command;pwd=123;Trusted_Connection=True;Encrypt=False",
+    "QueryConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_query;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+    "CommandConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_command;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "IdentityServer": {
     "aud": "https://feid.ptudev.net/resources",
