Update Project With New Docker File

--- a/Server/fptsocial/API/Properties/launchSettings.json
+++ b/Server/fptsocial/API/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        
       }
     },
     "Docker": {
@@ -23,7 +23,7 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "environmentVariables": {
-        "ASPNETCORE_URLS": "https://+:8080;http://+:8081"
+        "ASPNETCORE_URLS": "https://+:44329"
       },
       "publishAllPorts": true,
       "useSSL": true
