--- a/Server/fptsocial/.dockerignore
+++ b/Server/fptsocial/.dockerignore
@@ -1,25 +1,27 @@
-**/.classpath
-**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
-**/*.*proj.user
-**/*.dbmdl
-**/*.jfm
-**/azds.yaml
-**/bin
-**/charts
-**/docker-compose*
-**/Dockerfile*
-**/node_modules
-**/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
-LICENSE
-README.md
+# Ignore .NET Core build results
+bin/
+obj/
+
+# Ignore user-specific files
+*.swp
+*.swo
+*.user
+*.vspscc
+*.vssscc
+
+# Ignore MacOS system files
+.DS_Store
+
+# Ignore folders that might hold sensitive data or unnecessary information
+.idea/
+.vscode/
+.env
+node_modules/
+
+# Ignore Dockerfile and docker-compose override files
+Dockerfile.*
+docker-compose.override.yml
+
+# Ignore build output folders
+dist/
+build/
