Update molder for share post

--- a/Server/fptsocial/Dockerfile
+++ b/Server/fptsocial/Dockerfile
@@ -1,5 +1,10 @@
 
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS base
+WORKDIR /app
+EXPOSE 44320
+EXPOSE 44329
+
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["API/API.csproj", "API/"]
@@ -19,4 +24,7 @@ RUN dotnet publish "API.csproj" -c $BUILD_CONFIGURATION -o /app/publish
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
+
+RUN mkdir -p /app/certificates
+COPY certificates/aspnetapp.pfx /app/certificates/
 ENTRYPOINT ["dotnet", "API.dll"]
