--- a/Server/fptsocial/API/Properties/launchSettings.json
+++ b/Server/fptsocial/API/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:44329;http://localhost:5189"
+      "applicationUrl": "https://localhost:44329"
     },
     "IIS Express": {
       "commandName": "IISExpress",
