Create User For Chat Engine

--- a/Server/fptsocial/API/appsettings.Development.json
+++ b/Server/fptsocial/API/appsettings.Development.json
@@ -15,6 +15,10 @@
       "url": "https://feid.ptudev.net",
       "iss": "https://feid.ptudev.net",
       "Key": "Yr3&Og9&Dl6&Ie1#Rw2!Oj5!Yy1*Og3!"
+    },
+    "ChatEngine": {
+      "ProjectId": "d7c4f700-4fc1-4f96-822d-8ffd0920b438",
+      "PrivateKey": "62e47fdf-0ea8-429d-a68a-af5d0932ffac"
     }
   }
 }
