--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -23,6 +23,10 @@
     "CloudName": "dqitgxwfl",
     "ApiKey": "145216536742818",
     "ApiSecret": "a7lDRd3J5iRPOWJftYRiG2nmq9M"
-  }
+  },
 
+  "ChatEngine": {
+    "ProjectId": "d7c4f700-4fc1-4f96-822d-8ffd0920b438",
+    "PrivateKey": "62e47fdf-0ea8-429d-a68a-af5d0932ffac"
+  }
 }
