--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -43,6 +43,7 @@
     "npm": "^10.8.1",
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
+    "react-chat-engine": "^1.11.28",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
