--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -21,6 +21,7 @@
     "@mui/x-date-pickers": "^7.8.0",
     "@reduxjs/toolkit": "^2.2.5",
     "@tabler/icons-react": "^3.7.0",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@tiptap/extension-color": "^2.4.0",
     "@tiptap/extension-image": "^2.4.0",
@@ -31,6 +32,8 @@
     "@tiptap/react": "^2.4.0",
     "@tiptap/starter-kit": "^2.4.0",
     "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-moment": "^1.0.1",
     "cross-env": "^7.0.3",
     "dompurify": "^3.1.5",
     "emoji-mart": "^5.6.0",
@@ -45,10 +48,12 @@
     "react": "^18.2.0",
     "react-chat-engine-pretty": "^0.1.8",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "react-transition-group": "^4.4.5",
     "redux-persist": "^6.0.0",
     "yarn": "^1.22.22"
   },
