--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,83 @@
-# You can override the included template(s) by including variable overrides
-# SAST customization: https://docs.gitlab.com/ee/user/application_security/sast/#customizing-the-sast-settings
-# Secret Detection customization: https://docs.gitlab.com/ee/user/application_security/secret_detection/pipeline/#customization
-# Dependency Scanning customization: https://docs.gitlab.com/ee/user/application_security/dependency_scanning/#customizing-the-dependency-scanning-settings
-# Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
-# Note that environment variables can be set in several places
-# See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
-stages:
-- test
-sast:
-  stage: test
-include:
-- template: Security/SAST.gitlab-ci.yml
+Primary navigation
+Homepage
+Next
+
+ 7
+ Search or go to…
+Project
+G
+G9_SEP490_SU2024
+Learn GitLab
+58%
+
+Pinned
+Issues
+0
+Merge requests
+0
+
+Manage
+
+Plan
+
+Code
+Merge requests
+0
+Repository
+Branches
+Commits
+Tags
+Repository graph
+Compare revisions
+Snippets
+Locked files
+
+Build
+
+Secure
+
+Deploy
+
+Operate
+
+Monitor
+
+Analyze
+
+Settings
+MANHNC
+G9_SEP490_SU2024
+Repository
+You pushed to 
+set-sast-config-1
+ 43 minutes ago
+g9_sep490_su2024
+.gitlab-ci.yml
+Son Nguyen Viet Bao's avatar
+Update .gitlab-ci.yml file
+Son Nguyen Viet Bao authored 1 week ago
+50060c80
+ Code owners
+Assign users and groups as approvers for specific file changes. Learn more.
+ This GitLab CI configuration is valid. Learn more
+.gitlab-ci.yml
+372 B
+image: node:16.5.0
+pages:
+  stage: deploy
+  cache:
+    key:
+      files:
+        - package-lock.json
+      prefix: npm
+    paths:
+      - node_modules/
+  script:
+    - npm install
+    - npm run build
+    - cp -a dist/. public/
+    - cp public/index.html public/404.html  # Add this line to handle client-side routing
+  artifacts:
+    paths:
+      - public
+  when: manual
