--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -47,6 +47,7 @@
     "oidc-react": "^3.2.2",
     "react": "^18.2.0",
     "react-chat-engine-pretty": "^0.1.8",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.51.5",
