--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.4",
@@ -40,6 +43,7 @@
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
     "html-react-parser": "^5.1.10",
+    "i18next": "^23.12.2",
     "lodash": "^4.17.21",
     "material-ui-confirm": "^3.0.16",
     "moment": "^2.30.1",
@@ -51,6 +55,7 @@
     "react-dom": "^18.2.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.51.5",
+    "react-i18next": "^15.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
