Add API For Chat

--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -8,8 +8,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "QueryConnection": "Server=tcp:fptforum.public.6b92a00ccd32.database.windows.net,3342;Initial Catalog=fptforum;User ID=sa_query;Password=anhquan123456789@;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    "CommandConnection": "Server=tcp:fptforum.public.6b92a00ccd32.database.windows.net,3342;Initial Catalog=fptforum;User ID=sa_command;Password=anhquan123456789@;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "QueryConnection": "server =(local);database=fptforum;uid=sa;pwd=123;Trusted_Connection=True;Encrypt=False",
+    "CommandConnection": "server =(local);database=fptforum;uid=sa;pwd=123;Trusted_Connection=True;Encrypt=False"
     //"QueryConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_query;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
     //"CommandConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_command;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
