--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,45 +1,10 @@
-stages:
-    - sonarqube-check
-    - sonarqube-vulnerability-report
+default:
+  image:
+    name: aikidosecurity/local-scanner:v1.0.21
+    entrypoint: [""]
 
-sonarqube-check:
-  stage: sonarqube-check
-  image: mcr.microsoft.com/dotnet/sdk:7.0
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
-  cache:
-    key: "${CI_JOB_NAME}"
-    paths:
-      - .sonar/cache
-  script: 
-      - "apt-get update"
-      - "apt-get install --yes --no-install-recommends openjdk-17-jre"
-      - "dotnet tool install --global dotnet-sonarscanner"
-      - "export PATH=\"$PATH:$HOME/.dotnet/tools\""
-      - "dotnet sonarscanner begin /k:\"manhnc2_g3_sep490_su2024_5a6d847a-5d4e-4d23-b300-89599b53f6c6\" /d:sonar.token=\"$SONAR_TOKEN\" /d:\"sonar.host.url=$SONAR_HOST_URL\" "
-      - "dotnet build"
-      - "dotnet sonarscanner end /d:sonar.token=\"$SONAR_TOKEN\""
-  allow_failure: true
-  only:
-    - merge_requests
-    - master
-    - main
-    - develop
-
-sonarqube-vulnerability-report:
-  stage: sonarqube-vulnerability-report
+run_aikido_selfscanner:
   script:
-    - 'curl -u "${SONAR_TOKEN}:" "${SONAR_HOST_URL}/api/issues/gitlab_sast_export?projectKey=manhnc2_g3_sep490_su2024_5a6d847a-5d4e-4d23-b300-89599b53f6c6&branch=${CI_COMMIT_BRANCH}&pullRequest=${CI_MERGE_REQUEST_IID}" -o gl-sast-sonar-report.json'
-  allow_failure: true
-  only:
-    - merge_requests
-    - master
-    - main
-    - develop
-  artifacts:
-    expire_in: 1 day
-    reports:
-      sast: gl-sast-sonar-report.json
-  dependencies:
-    - sonarqube-check
+  - aikido-local-scanner scan ./ --apikey $AIKIDO_LOCAL_SCANNER_TOKEN --repositoryname DemoApp --branchname main
+  rules:
+    - if: $CI_COMMIT_BRANCH == "main"
