--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,6 @@ default:
 
 run_aikido_selfscanner:
   script:
-  - aikido-local-scanner scan ./ --apikey $AIKIDO_LOCAL_SCANNER_TOKEN --repositoryname https://gitlab.com/manhnc2/g3_sep490_su2024 --branchname main
+  - aikido-local-scanner scan ./ --apikey AIK_CI_ojAGrGTmTaFV2NfuXCOLH3Nhp88Qj8hbM2HrMhKT4KCB9gMUQwI2rPCaO4qaJsie --repositoryname https://gitlab.com/manhnc2/g3_sep490_su2024 --branchname main
   rules:
     - if: $CI_COMMIT_BRANCH == "main"
