--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -28,5 +28,12 @@
   "ChatEngine": {
     "ProjectId": "d7c4f700-4fc1-4f96-822d-8ffd0920b438",
     "PrivateKey": "62e47fdf-0ea8-429d-a68a-af5d0932ffac"
+  },
+  "FptAccount": {
+    "ClientId": "identity-service",
+    "ClientSecret": "Yr3&Og9&Dl6&Ie1#Rw2!Oj5!Yy1*Og3!",
+    "Scope": "identity-service",
+    "Username": "societe@gmail.com",
+    "Password": "Fe3@Ep0&"
   }
 }
