--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -17,6 +17,7 @@
     "@emoji-mart/react": "^1.1.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google/generative-ai": "^0.16.0",
     "@material/dialog": "^14.0.0",
     "@microsoft/signalr": "^8.0.0",
     "@mui/lab": "^5.0.0-alpha.170",
