--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -19,6 +19,7 @@
     "@emotion/styled": "^11.11.5",
     "@material/dialog": "^14.0.0",
     "@microsoft/signalr": "^8.0.0",
+    "@mui/icons-material": "^5.16.7",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.21",
     "@mui/x-date-pickers": "^7.8.0",
