--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -41,6 +41,7 @@
     "chartjs-adapter-moment": "^1.0.1",
     "cross-env": "^7.0.3",
     "dompurify": "^3.1.5",
+    "dotenv": "^16.4.5",
     "emoji-mart": "^5.6.0",
     "emoji-picker-react": "^4.9.4",
     "framer-motion": "^11.2.10",
