--- a/Client/fptsocial/package.json
+++ b/Client/fptsocial/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "cross-env BUILD_MODE=dev vite --host --port 3000",
+    "dev_preview": "cross-env BUILD_MODE=dev_preview vite --host --port 3000",
     "build": "cross-env BUILD_MODE=production vite build --base=./",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
