--- a/Server/fptsocial/API/appsettings.json
+++ b/Server/fptsocial/API/appsettings.json
@@ -1,39 +1,46 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ConnectionStrings": {
+        "QueryConnection": "server =FPTSOCIAL;database=fptforum;uid=sa_query;pwd=E7k9f3K9xTg2Iy4jj;Trusted_Connection=True;Encrypt=False",
+        "CommandConnection": "server =FPTSOCIAL;database=fptforum;uid=sa;pwd=E7k9f3K9xTg2Iy4jj;Trusted_Connection=True;Encrypt=False"
+        //"QueryConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_query;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+        //"CommandConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_command;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    },
+    "IdentityServer": {
+        "aud": "https://feid.ptudev.net/resources",
+        "url": "https://feid.ptudev.net",
+        "iss": "https://feid.ptudev.net",
+        "Key": "Yr3&Og9&Dl6&Ie1#Rw2!Oj5!Yy1*Og3!"
+    },
+    "Cloudinary": {
+        "CloudName": "dmirk3taj",
+        "ApiKey": "454874588118245",
+        "ApiSecret": "u7NnUoqW1ZEA6Zm8Os3y635gNVo"
+    },
+
+    "ChatEngine": {
+        "ProjectId": "d7c4f700-4fc1-4f96-822d-8ffd0920b438",
+        "PrivateKey": "62e47fdf-0ea8-429d-a68a-af5d0932ffac"
+    },
+    "FptAccount": {
+        "ClientId": "identity-service",
+        "ClientSecret": "Yr3&Og9&Dl6&Ie1#Rw2!Oj5!Yy1*Og3!",
+        "Scope": "identity-service",
+        "Username": "societe@gmail.com",
+        "Password": "Fe3@Ep0&"
+    },
+    "MailSettings": {
+        "Email": "quannahe164025@fpt.edu.vn",
+        "Password": "befy lqik nwjk haox",
+        "DisplayName": "From FPT Social",
+        "Port": 587,
+        "Host": "smtp.gmail.com"
     }
-  },
-  "AllowedHosts": "*",
-
-  "ConnectionStrings": {
-    "QueryConnection": "server =(local);database=fptforum;uid=sa;pwd=123;Trusted_Connection=True;Encrypt=False",
-    "CommandConnection": "server =(local);database=fptforum;uid=sa;pwd=123;Trusted_Connection=True;Encrypt=False"
-    //"QueryConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_query;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
-    //"CommandConnection": "Server=tcp:sep490fpt.database.windows.net,1433;Initial Catalog=fptforum;User ID=sa_command;Password=sep490g3#;Persist Security Info=False;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  },
-  "IdentityServer": {
-    "aud": "https://feid.ptudev.net/resources",
-    "url": "https://feid.ptudev.net",
-    "iss": "https://feid.ptudev.net",
-    "Key": "Yr3&Og9&Dl6&Ie1#Rw2!Oj5!Yy1*Og3!"
-  },
-  "Cloudinary": {
-    "CloudName": "dqitgxwfl",
-    "ApiKey": "145216536742818",
-    "ApiSecret": "a7lDRd3J5iRPOWJftYRiG2nmq9M"
-  },
-
-  "ChatEngine": {
-    "ProjectId": "d7c4f700-4fc1-4f96-822d-8ffd0920b438",
-    "PrivateKey": "62e47fdf-0ea8-429d-a68a-af5d0932ffac"
-  },
-  "FptAccount": {
-    "ClientId": "identity-service",
-    "ClientSecret": "Yr3&Og9&Dl6&Ie1#Rw2!Oj5!Yy1*Og3!",
-    "Scope": "identity-service",
-    "Username": "societe@gmail.com",
-    "Password": "Fe3@Ep0&"
-  }
 }
